--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,3 +15,6 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.3
 Imports: 
     expint
+Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
