--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,7 +14,10 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.3
 Imports: 
-    expint
+    dplyr,
+    expint,
+    magrittr,
+    rlang
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
