--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(lifedisp)
 importFrom(dplyr,lag)
 importFrom(dplyr,lead)
 importFrom(dplyr,mutate)
+importFrom(dplyr,select)
 importFrom(expint,expint)
 importFrom(magrittr,"%>%")
 importFrom(rlang,.data)
