--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,7 @@ Authors@R:
       comment = c(ORCID = "0000-0002-1939-085X")
       )
 Description: A framework for analytically calculating non-standard life table variables.
-    You provide the basic life table, then use 'lxtra' functions to add new columns.  
+    You provide the basic life table, then use 'ltxtra' functions to add new columns.  
 License: GPL (>= 3)
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
